immich/kiosk/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-kiosk
spec:
  replicas: 1
  selector:
    matchLabels:
  template:
    metadata:
      labels:
    spec:
      containers:
        - name: immich-kiosk
          image: ghcr.io/damongolding/immich-kiosk
          livenessProbe:
            httpGet:
              port: http
              path: /health
          readinessProbe:
            httpGet:
              port: http
              path: /health
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          ports:
            - name: http
              containerPort: 3000
      volumes:
        - name: config
          configMap:
            name: immich-kiosk-config

---
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
