immich/kiosk/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-kiosk
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`immich-kiosk.fritz.box`)
    services:
    - name: immich-kiosk
      port: 3000
